--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Room Creation</title>
+		<title>MODULE 2 Exam - LIMCATCHON</title>
 		<style>
 			body { margin: 0; }
 		</style>
